--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="js/prom.js"></script>
+    <h1>Fetch</h1>
+    <script src="js/fetch/fetch.js"></script>
 </body>
 </html>
