--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <h1>Fetch</h1>
+    <img src=""  id="id33"></img>
+    <img src=""  id="id34"></img>
+    <img src="" alt="">
+    <div id="prueba"></div>
     <script src="js/fetch/fetch.js"></script>
 </body>
 </html>
